--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>xmlsec</artifactId>
             <version>1.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
 
     </dependencies>
 
