--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -135,11 +133,11 @@
                                 <configuration>
 
                                     <target>
-                                        <echo message="Start ant task copy ${project.build.directory}${file.separator}${project.build.finalName}.jar"/>
+                                        <echo message="Start ant task copy ${project.build.directory}${file.separator}${project.build.finalName}.jar" />
 
                                         <copy todir="${project.build.directory}${file.separator}/dist">
                                             <fileset dir="${project.build.directory}">
-                                                <include name="${project.build.finalName}.jar"/>
+                                                <include name="${project.build.finalName}.jar" />
                                             </fileset>
                                         </copy>
                                     </target>
