--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,9 @@
             </plugin>
         </plugins>
     </build>
+     <properties>
+      <maven.test.skip>true</maven.test.skip>
+    </properties>
     <profiles>
         <profile>
             <id>dist</id>
